Adds nav to TttGames#index

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,12 @@
 <p class="notice"><%= notice %></p>
 <p class="alert"><%= alert %></p>
 
+<nav class="nav">
+  <ul>
+    <li><%= link_to "TttGames", ttt_games_path %></li>
+  </ul>
+</nav>
+
 <%= yield %>
 
 </body>
