Adds link to create new game, continue game, or show finished game

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
 <nav class="nav">
   <ul>
-    <li><%= link_to "TttGames", ttt_games_path %></li>
+    <li><%= link_to "TicTacToe Games", ttt_games_path %></li>
   </ul>
 </nav>
 
