--- a/app/views/ttt_games/index.html.erb
+++ b/app/views/ttt_games/index.html.erb
@@ -1,9 +1,18 @@
+<%= render "nav" %>
+
 <h2>TttGame#Index</h2>
 
 <ol>
   <% @ttt_games.each do |ttt_game| %>
     <li>
-      <%= link_to ttt_game.id, ttt_game_path(ttt_game) %>
+      <% case ttt_game.state %>
+        <% when 'finished' %>
+          <%= link_to "Show Game #{ttt_game.id}", ttt_game_path(ttt_game) %>
+        <% when 'error', 'next' %>
+          <%= link_to "Continue Game #{ttt_game.id}", edit_ttt_game_path(ttt_game) %>
+        <% else %>
+          <%= link_to "Continue Game #{ttt_game.id}", edit_ttt_game_path(ttt_game) %>
+      <% end %>
       <%= ttt_game.state %>
       <p><%= ttt_game.player1_user.name %> vs <%= ttt_game.player2_user.name %></p>
       <%= link_to "Delete", ttt_game_path(ttt_game), method: :delete %>
