--- a/app/views/ttt_games/new.html.erb
+++ b/app/views/ttt_games/new.html.erb
@@ -7,8 +7,11 @@
     <%= f.collection_select(:player2, @users, :id, :name, include_blank: 'Select Player 2') %>
   </div>
   <div class="form-group">
-    <%= f.label :opponent, "Select Opponent Mode" %>
-    <%= f.select(:opponent, options_for_select([['Friend', 'friend'], ['Ru-bot', 'ai']])) %>
+    <%= f.hidden_field :opponent, value: 'user' %>
+  </div>
+  <div class="form-group">
+    <%# f.label :opponent, "Select Opponent Mode" %>
+    <%# f.select(:opponent, options_for_select([['Friend', 'friend'], ['Ru-bot', 'ai']])) %>
   </div>
   <div class="form-action">
     <%= f.submit %>
