--- a/app/views/ttt_games/edit.html.erb
+++ b/app/views/ttt_games/edit.html.erb
@@ -5,4 +5,6 @@
 <p>Current Player: <% @ttt_game.current_player_user.name %> <% @ttt_game.current_player[:symbol] %></p>
 <p>State: <%= @ttt_game.state %></p>
 
+<p><%= @ttt_game.message %></p>
+
 <%= render "board" %>
