--- a/app/views/ttt_games/show.html.erb
+++ b/app/views/ttt_games/show.html.erb
@@ -5,6 +5,8 @@
 <p>Current Player: <%= @ttt_game.current_player_user.name %> <%= @ttt_game.current_player[:symbol] %></p>
 <p>State: <%= @ttt_game.state %></p>
 
+<p><%= @ttt_game.message %></p>
+
 <%= render "waiting_board" %>
 
   <% if @ttt_game.finished? %>
