Changes User.name to User.username on table and in views. Adds validation on username for uniqueness and length >= 3

--- a/app/views/ttt_games/index.html.erb
+++ b/app/views/ttt_games/index.html.erb
@@ -14,7 +14,7 @@
           <%= link_to "Continue Game #{ttt_game.id}", edit_ttt_game_path(ttt_game) %>
       <% end %>
       <%= ttt_game.state %>
-      <p><%= ttt_game.player1_user.name %> vs <%= ttt_game.player2_user.name %></p>
+      <p><%= ttt_game.player1_user.username %> vs <%= ttt_game.player2_user.username %></p>
       <%= link_to "Delete", ttt_game_path(ttt_game), method: :delete %>
     </li>
   <% end %>
