--- a/app/views/ttt_games/show.html.erb
+++ b/app/views/ttt_games/show.html.erb
@@ -1,8 +1,8 @@
 <h2>TttGame#show</h2>
 
-<p><%= @ttt_game.player1_user.name %> <%= @ttt_game.player1[:symbol] %></p>
-<p><%= @ttt_game.player2_user.name %> <%= @ttt_game.player2[:symbol] %></p>
-<p>Current Player: <%= @ttt_game.current_player_user.name %> <%= @ttt_game.current_player[:symbol] %></p>
+<p><%= @ttt_game.player1_user.username %> <%= @ttt_game.player1[:symbol] %></p>
+<p><%= @ttt_game.player2_user.username %> <%= @ttt_game.player2[:symbol] %></p>
+<p>Current Player: <%= @ttt_game.current_player_user.username %> <%= @ttt_game.current_player[:symbol] %></p>
 <p>State: <%= @ttt_game.state %></p>
 
 <p><%= @ttt_game.message %></p>
