--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,19 @@
 <p class="notice"><%= notice %></p>
 <p class="alert"><%= alert %></p>
 
+<div class="login">
+  <% if current_user %>
+    <%= current_user.email %>
+    <%= link_to "Log Out", destroy_user_session_path, method: :delete %>
+  <%# elsif current_admin %>
+    <%# current_admin.email %>
+    <%# link_to "Log Out", destroy_admin_session_path, method: :delete %>
+  <% else %>
+    <%= link_to "Log In", new_user_session_path %>
+    <%= link_to "Sign Up", new_user_registration_path %>
+  <% end %>
+</div>
+
 <nav class="nav">
   <ul>
     <li><%= link_to "TicTacToe Games", ttt_games_path %></li>
