--- a/app/views/ttt_games/edit.html.erb
+++ b/app/views/ttt_games/edit.html.erb
@@ -2,7 +2,7 @@
 
 <p><%= @ttt_game.player1_user.username %> <%= @ttt_game.player1[:symbol] %></p>
 <p><%= @ttt_game.player2_user.username %> <%= @ttt_game.player2[:symbol] %></p>
-<p>Current Player: <% @ttt_game.current_player_user.username %> <% @ttt_game.current_player[:symbol] %></p>
+<p>Current Player: <%= @ttt_game.current_player_user.username %> <%= @ttt_game.current_player[:symbol] %></p>
 <p>State: <%= @ttt_game.state %></p>
 
 <p><%= @ttt_game.message %></p>
