--- a/app/views/ttt_games/new.html.erb
+++ b/app/views/ttt_games/new.html.erb
@@ -23,7 +23,7 @@
 <h3>Play a Friend Sitting Next to You</h3>
 <%= form_for @ttt_game do |f| %>
   <div class="form-group">
-    <%= f.hidden_field :player2, value: 1 %>
+    <%= f.hidden_field :player2, value: current_user.id %>
     <%= f.hidden_field :opponent, value: 'friend' %>
   </div>
   <div class="form-action">
