--- a/app/views/ttt_games/show.html.erb
+++ b/app/views/ttt_games/show.html.erb
@@ -1,24 +1,32 @@
-<h2>TttGame#show</h2>
+<% unless @ttt_game.finished? %>
+  <script type="text/javascript">
+          setTimeout(function(){
+            window.location.reload(1);
+          }, 4000);
+        </script>
+<% end %>
 
-<p><%= @ttt_game.player1_user.username %> <%= @ttt_game.player1[:symbol] %></p>
-<p><% if @ttt_game.friend_playing? %>
-    Friend
+<div class="ttt-game">
+  <div class="ttt-message">
+    <h3><%= @ttt_game.message %></h3>
+  </div>
+
+  <%= render "waiting_board" %>
+</div>
+
+<div class="ttt-player player1 go-left">
+  <p><%= @ttt_game.player1_user.username %></p>
+  <p><%= @ttt_game.player1[:symbol] %></p>
+</div>
+
+<div class="ttt-player player2 go-right">
+  <% if @ttt_game.friend_playing? %>
+    <p><%= @ttt_game.player1_user.username %><small>'s</small> Friend</p>
   <% else %>
-    <%= @ttt_game.player2_user.username %>
+    <p><%= @ttt_game.player2_user.username %></p>
   <% end %>
-<%= @ttt_game.player2[:symbol] %></p>
-<p>Current Player: 
-  <% if @ttt_game.friend_playing? && @ttt_game.current_player_is_friend? %>
-    Friend
-  <% else %>
-    <%= @ttt_game.current_player_user.username %>
-  <% end %>
-  <%= @ttt_game.current_player[:symbol] %></p>
-<p>State: <%= @ttt_game.state %></p>
-
-<p><%= @ttt_game.message %></p>
-
-<%= render "waiting_board" %>
+  <p><%= @ttt_game.player2[:symbol] %></p>
+</div>
 
   <% if @ttt_game.finished? %>
     <%= form_for @ttt_game do |f| %>
