--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -114,7 +114,7 @@ form.new_ttt_game {
 
   height: 400px;
   width: 400px;
-  border-radius: 50%;
+  border-radius: 2px;
   margin-top: -100px;
 }
 
