--- a/app/views/ttt_games/index.html.erb
+++ b/app/views/ttt_games/index.html.erb
@@ -7,6 +7,11 @@
   <% @in_progress_ttt_games.each do |ttt_game| %>
     <li>
       <%= link_to "Continue Game #{ttt_game.id}", edit_ttt_game_path(ttt_game) %>
+      <% if current_user.id == ttt_game.current_player[:id] %>
+         Your Turn!
+      <% else %>
+        <%= ttt_game.message %>
+      <% end %>
       <p><%= ttt_game.player1_user.username %> vs <%= ttt_game.player2_user.username %></p>
       <%= link_to "Delete", ttt_game_path(ttt_game), method: :delete %>
     </li>
