Style devise forms

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,26 @@
  *= require_tree .
  *= require_self
  */
+ /*
+   ========================================
+   Layout
+   ========================================
+ */
+
+ html {
+   -webkit-box-sizing: border-box;
+   -moz-box-sizing: border-box;
+   box-sizing: border-box;
+ }
+ *, *:before, *:after {
+   -webkit-box-sizing: inherit;
+   -moz-box-sizing: inherit;
+   box-sizing: inherit;
+   }
+
+input {
+  auto-complete: none;
+}
 
  /*
    ========================================
@@ -109,9 +129,6 @@ form.new_ttt_game {
   background: radial-gradient(ellipse at center,  #ffffff 0%,#d62222 40%,#d62222 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#d62222',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
 
-
-
-
   height: 400px;
   width: 400px;
   border-radius: 2px;
@@ -161,8 +178,50 @@ form.new_ttt_game:first-child {
   background: #fff;
 }
 
+/*
+  ========================================
+  Devise
+  ========================================
+*/
+.notice,
+.alert {
+  color: #fff;
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  text-align: center;
+  background-color: gray;
+  border: 4px solid black;
+  padding: 0 1em;
+}
 
 
+.devise {
+  color: #fff;
+  background: #D62222;
+  padding: 10px 30px 40px 48px;
+/*  padding-left: 40px;*/
+  width: 400px;
+  margin: 10px auto;
+}
+
+.devise input {
+  color: #000;
+  border-radius: 2px;
+  border: none;
+  padding: .2em;
+  padding-left: .5em;
+  width: 300px;
+}
+
+.devise input[type=checkbox] {
+  width: 1em;
+}
+
+
+.devise .actions {
+  margin: 1em 0;
+}
 
 
 
