--- a/app/views/ttt_games/index.html.erb
+++ b/app/views/ttt_games/index.html.erb
@@ -1,30 +1,33 @@
 <%= render "nav" %>
 
-<h2>TttGame#Index</h2>
-
-<h3>In Progress Games</h3>
-<ol>
+<div class="list">
+<h2 class="list-header">In Progress</h2>
   <% @in_progress_ttt_games.each do |ttt_game| %>
-    <li>
-      <%= link_to "Continue Game #{ttt_game.id}", edit_ttt_game_path(ttt_game) %>
-      <% if current_user.id == ttt_game.current_player[:id] %>
-         Your Turn!
-      <% else %>
-        <%= ttt_game.message %>
-      <% end %>
-      <p><%= ttt_game.player1_user.username %> vs <%= ttt_game.player2_user.username %></p>
-      <%= link_to "Delete", ttt_game_path(ttt_game), method: :delete %>
-    </li>
+    <%= link_to edit_ttt_game_path(ttt_game) do %>
+    <div class="list-item">
+        <h3 class="list-title"><%= ttt_game.player1_user.username %> <small>vs</small> <%= ttt_game.player2_user.username %></h3>
+        <p class="list-subtitle">Last played: <%= distance_of_time_in_words_to_now(ttt_game.updated_at)%> ago</p>
+        <div class="list-message wordwrap">
+          <% if current_user.id == ttt_game.current_player[:id] %>
+             <span class="your-turn">Your Turn!</span>
+          <% else %>
+            <span class="opponents-turn"><%= ttt_game.message %></span>
+          <% end %>
+        </div>
+      <%# link_to "Continue Game #{ttt_game.id}", edit_ttt_game_path(ttt_game) %>
+      <%# link_to "Delete", ttt_game_path(ttt_game), method: :delete %>
+    </div>
+    <% end %>
   <% end %>
-</ol>
+</div>
 
-<h3>Finished Games</h3>
-<ol>
+<div class="list">
+<h2 class="list-header">Finished</h2>
   <% @finished_ttt_games.each do |ttt_game| %>
-    <li>
+    <div class="list-item">
       <%= link_to "Show Game #{ttt_game.id}", ttt_game_path(ttt_game) %>
       <p><%= ttt_game.player1_user.username %> vs <%= ttt_game.player2_user.username %></p>
       <%= link_to "Delete", ttt_game_path(ttt_game), method: :delete %>
-    </li>
+    </div>
   <% end %>
-</ol>
+</div>
