--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -20,7 +20,7 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
+    <%= f.label :password %> <small><i>(leave blank if you don't want to change it)</i></small><br />
     <%= f.password_field :password, autocomplete: "off" %>
   </div>
 
@@ -30,7 +30,7 @@
   </div>
 
   <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
+    <%= f.label :current_password %> <small><i>(we need your current password to confirm your changes)</i><small><br />
     <%= f.password_field :current_password, autocomplete: "off" %>
   </div>
 
