--- a/app/views/ttt_games/edit.html.erb
+++ b/app/views/ttt_games/edit.html.erb
@@ -1,21 +1,9 @@
+<%= render "players" %>
+
 <div class="ttt-game">
   <div class="ttt-message">
     <h3><%= @ttt_game.message %></h3>
   </div>
 
   <%= render "board" %>
-</div>
-
-<div class="ttt-player player1 go-left">
-  <p><%= @ttt_game.player1_user.username %></p>
-  <p><%= @ttt_game.player1[:symbol] %></p>
-</div>
-
-<div class="ttt-player player2 go-right">
-  <% if @ttt_game.friend_playing? %>
-    <p><%= @ttt_game.player1_user.username %><small>'s</small> Friend</p>
-  <% else %>
-    <p><%= @ttt_game.player2_user.username %></p>
-  <% end %>
-  <p><%= @ttt_game.player2[:symbol] %></p>
 </div>
