--- a/app/views/ttt_games/show.html.erb
+++ b/app/views/ttt_games/show.html.erb
@@ -12,30 +12,21 @@
   </div>
 
   <%= render "waiting_board" %>
-</div>
-
-<div class="ttt-player player1 go-left">
-  <p><%= @ttt_game.player1_user.username %></p>
-  <p><%= @ttt_game.player1[:symbol] %></p>
-</div>
-
-<div class="ttt-player player2 go-right">
-  <% if @ttt_game.friend_playing? %>
-    <p><%= @ttt_game.player1_user.username %><small>'s</small> Friend</p>
-  <% else %>
-    <p><%= @ttt_game.player2_user.username %></p>
-  <% end %>
-  <p><%= @ttt_game.player2[:symbol] %></p>
-</div>
-
   <% if @ttt_game.finished? %>
-    <%= form_for @ttt_game do |f| %>
-      <%= f.hidden_field :player1, value: @ttt_game.player1 %>
-      <%= f.hidden_field :player2, value: @ttt_game.player2 %>
-      <%= f.hidden_field :opponent, value: 'user' %>
-      <%= f.hidden_field :current_player, value: @ttt_game.first_player %>
-      <div class="form-action">
-        <%= f.submit "New Game?" %>
-      </div>
-    <% end %>
+    <%= link_to "New Game?", new_ttt_game_path %>
   <% end %>
+</div>
+
+<%= render "players" %>
+
+
+
+  <%# if @ttt_game.finished? %>
+    <%# form_for @ttt_game do |f| %>
+      <%# f.hidden_field :player1, value: @ttt_game.player1 %>
+      <%# f.hidden_field :player2, value: @ttt_game.player2 %>
+      <%# f.hidden_field :opponent, value: 'user' %>
+      <%# f.hidden_field :current_player, value: @ttt_game.first_player %>
+      <%# f.submit "New Game?" %>
+    <%# end %>
+  <%# end %>
