--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -57,7 +57,7 @@ input {
  }
 
  .ruby {
-  color: #D62222;
+  color: #F02626;
  }
 
  .games {
@@ -114,16 +114,14 @@ input {
 */
 form.new_ttt_game {
   /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,d62222+40,d62222+100 */
-  background: #ffffff; /* Old browsers */
-  background: -moz-radial-gradient(center, ellipse cover,  #ffffff 0%, #d62222 40%, #d62222 100%); /* FF3.6-15 */
-  background: -webkit-radial-gradient(center, ellipse cover,  #ffffff 0%,#d62222 40%,#d62222 100%); /* Chrome10-25,Safari5.1-6 */
-  background: radial-gradient(ellipse at center,  #ffffff 0%,#d62222 40%,#d62222 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#d62222',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
-
-  height: 400px;
+  background-color: #F02626;
   width: 400px;
   border-radius: 2px;
-  margin-top: -100px;
+  padding: 0.1em 1em 1em 1em;
+  margin: 10px auto;
+  margin-bottom: 10px;
+  /*margin-top: -100px;*/
+  color: #fff;
 }
 
 form.new_ttt_game:first-child {
@@ -131,7 +129,7 @@ form.new_ttt_game:first-child {
 
 .form-header {
   text-align: center;
-  padding-top: 150px;
+  /*padding-top: 150px;*/
 }
 
 .form-group {
@@ -149,6 +147,7 @@ form.new_ttt_game:first-child {
    padding: .2em;
    padding-left: .7em;
    cursor: pointer;
+   color: #000;
 }
 
 .form-group:hover select {
@@ -156,11 +155,12 @@ form.new_ttt_game:first-child {
 }
 
 .form-action {
-  width: 156px;
+  width: 200px;
   margin: 0 auto;
 }
 
 .form-action input {
+  width: 200px;
   border: 4px solid #961818;
   background: none;
 }
@@ -189,7 +189,7 @@ form.new_ttt_game:first-child {
 
 .devise {
   color: #fff;
-  background: #D62222;
+  background: #F02626;
   padding: 10px 30px 40px 48px;
 /*  padding-left: 40px;*/
   width: 400px;
@@ -225,7 +225,7 @@ form.new_ttt_game:first-child {
 }
 
 .list-item {
-  background-color: #D62222;
+  background-color: #FC2828;
   margin-bottom: 4px;
   padding: 1em;
   width: 90%;
@@ -238,7 +238,7 @@ form.new_ttt_game:first-child {
 }
 
 .list-item:hover {
-  margin: -2px 0 5px -2px;
+  margin: -2px 0px 5px -10px;
   box-shadow: 2px 2px 2px black;
   background-color: red;
 }
