Adds avatar with carrierwave and rmagick. Fixes default_player seeds and write logic to find RUBOT when playing rubot

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -11,6 +11,12 @@
   </div>
 
   <div class="field">
+    <%= f.label :avatar %><br />
+    <%= f.file_field :avatar, class: "custom-file-input" %>
+    <%= f.hidden_field :avatar_cache %>
+  </div>
+
+  <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autocomplete: "off" %>
   </div>
