--- a/app/views/ttt_games/_players.html.erb
+++ b/app/views/ttt_games/_players.html.erb
@@ -1,6 +1,7 @@
 <div class="ttt-player player1 go-left group">
   <p><%= @ttt_game.player1_user.username %></p>
   <p><%= @ttt_game.player1[:symbol] %></p>
+  <%= image_tag @ttt_game.player1_user.avatar.thumb %>
 </div>
 
 <div class="ttt-player player2 go-left group">
