--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -13,7 +13,7 @@
   <div class="field">
     <%= f.label :avatar %><br />
     <%= f.file_field :avatar, class: "custom-file-input" %>
-    <%= f.hidden_field :avatar_cache %>
+    <%# f.hidden_field :avatar_cache %>
   </div>
 
   <div class="field">
